# advent-of-code

./: .gitignore  LICENSE  README.md
2015/python/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py
2016/haskell/: aoc2016.cabal  day_01.hs  haskell.cabal  hie.yaml  stack.yaml
2016/haskell/app/: day_01.hs  day_02.hs  day_03.hs  day_05.hs  day_09.hs  day_10.hs  day_13.hs  day_14.hs  day_15.hs  day_16.hs  day_17.hs  day_18.hs  day_19.hs  day_20.hs  day_21.hs  day_22.hs
2016/haskell/src/: day_02.hs  day_03.hs  day_04.hs  day_05.hs  day_06.hs  day_07.hs  day_08.hs  day_09.hs  day_10.hs  day_12.hs
2022/python/: day_01.py  day_02.py  day_05.py  day_06.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16_unfinished.py  day_3.py  day_4.py  day_6.py  day_7.py  day_8.py  day_9.py
2022/python/day_1/: day_1.py  day_1_compact.py
2022/python/day_2/: day_2.py
2022/python/day_3/: day_3.py
2022/python/day_4/: day_4.py
2022/rust/day_1/src/: main.rs
2022/rust/day_2/src/: main.rs
2023/python/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py
2024/haskell/: day_01.hs
2024/python/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_17.py  day_18.py  day_19.py  day_22.py  day_23.py  day_24.py  day_25.py
2025/python/: day_00.py  day_01.py  day_02.py  day_03  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09_with_lib.py  day_10.py  day_11.py  day_12.py
