cabal-version:      3.4
name:               aoc2016
version:            0.1.0.0
synopsis: Advent of Code 2016 in Haskell
license:            MIT
author:             Vincent Hiribarren
build-type:         Simple

common warnings
    ghc-options: -Wall

common exe-settings
  import:            warnings
  hs-source-dirs:    src
  build-depends:     base >=4.14 && <5
  default-language:  Haskell2010

executable day_01
    import:           exe-settings
    main-is:          day_01.hs
    build-depends:    containers, split

executable day_02
    import:           exe-settings
    main-is:          day_02.hs

executable day_03
    import:           exe-settings
    main-is:          day_03.hs
    build-depends:    split

executable day_04
    import:           exe-settings
    main-is:          day_04.hs
    build-depends:    regex-tdfa

executable day_05
    import:           exe-settings
    main-is:          day_05.hs
    build-depends:    cryptohash-md5, bytestring, base16-bytestring
 
executable day_06
    import:           exe-settings
    main-is:          day_06.hs