cabal-version:      3.4
name:               aoc2016
version:            0.1.0.0
synopsis:           Advent of Code 2016 in Haskell
license:            MIT
author:             Vincent Hiribarren
build-type:         Simple

common warnings
    ghc-options:      -Wall

common exe-settings
    import:            warnings
    hs-source-dirs:    app
    build-depends:     base >=4.14 && <5
    default-language:  Haskell2010

executable day_01
    import:           exe-settings
    main-is:          day_01.hs
    build-depends:    containers, split

executable day_02
    import:           exe-settings
    main-is:          day_02.hs

executable day_03
    import:           exe-settings
    main-is:          day_03.hs
    build-depends:    split

executable day_04
    import:           exe-settings
    main-is:          day_04.hs
    build-depends:    regex-tdfa

executable day_05
    import:           exe-settings
    main-is:          day_05.hs
    build-depends:    cryptohash-md5, bytestring, base16-bytestring
 
executable day_07
    import:           exe-settings
    main-is:          day_07.hs

executable day_08
    import:           exe-settings
    main-is:          day_08.hs
    build-depends:    containers

executable day_09
    import:           exe-settings
    main-is:          day_09.hs

executable day_10
    import:           exe-settings
    main-is:          day_10.hs
    build-depends:    containers, mtl

executable day_11
    import:           exe-settings
    main-is:          day_11.hs
    build-depends:    containers

executable day_12
    import:           exe-settings
    main-is:          day_12.hs
    build-depends:    containers

executable day_13
    import:           exe-settings
    main-is:          day_13.hs
    build-depends:    containers

executable day_14
    import:           exe-settings
    main-is:          day_14.hs
    build-depends:    cryptohash-md5, bytestring, base16-bytestring

executable day_15
    import:           exe-settings
    main-is:          day_15.hs

executable day_16
    import:           exe-settings
    main-is:          day_16.hs
    build-depends:    split

executable day_17
    import:           exe-settings
    main-is:          day_17.hs
    build-depends:    cryptohash-md5, bytestring, base16-bytestring, containers

executable day_18
    import:           exe-settings
    main-is:          day_18.hs